update jQuery cdn

--- a/phone.html
+++ b/phone.html
@@ -1,4 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>cellphone</title>
+    <link type="text/css" rel="stylesheet" href="phone.css">
+    
+    <!-- 掛載JS樣式 -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    
+   
+</head>
+<body>
 <div class="phone">
   <div class="top">
     <div class="camera"></div>
@@ -26,11 +38,100 @@
 </div>
 <!--h3.status The "Best" Iphone we've ever made-->
 <h2 class="phonename">Iphone5</h2>
-<div class="buttons">
-  <button class="i5">iphone5</button>
-  <button class="i5s">iphone5s</button>
-  <button class="i6">iphone6</button>
-  <button class="i6s">iphone6+</button>
-  <button class="wiggle">wiggle</button>
-  <button class="turn">turn around</button>
-</div>
+  <div class="buttons">
+    <button class="i5">iphone5</button>
+    <button class="i5s">iphone5s</button>
+    <button class="i6">iphone6</button>
+    <button class="i6s">iphone6+</button>
+    <button class="wiggle">wiggle</button>
+    <button class="turn">turn around</button>
+  </div>
+  <script>
+      var button_audio=new
+      Audio("http://www.monoame.com/awi_class/ballsound/click14.wav");
+
+      var screen_audio=new
+      Audio("http://www.monoame.com/awi_class/ballsound/click18.wav");
+
+      var home_audio=new
+      Audio("http://www.monoame.com/awi_class/ballsound/click12.wav");
+
+      var wiggle_audio=new
+      Audio("http://www.monoame.com/awi_class/ballsound/phonevi.mp3");
+
+      $(".i5").click(function(){
+        $(".phone").css("width","");
+        $(".screen").css("height","");
+        $(".phonename").text($(this).text());
+        button_audio.play();
+      })
+
+      $(".i5s").click(function(){
+        $(".phone").css("width","250px");
+        $(".screen").css("height","420px");
+        $(".phonename").text($(this).text());
+        button_audio.play();
+      })
+
+      $(".i6").click(function(){
+        $(".phone").css("width","270px");
+        $(".screen").css("height","440px");
+        $(".phonename").text($(this).text());
+        button_audio.play();
+      })
+
+      $(".i6s").click(function(){
+        $(".phone").css("width","300px");
+        $(".screen").css("height","480px");
+        $(".phonename").text($(this).text());
+        button_audio.play();
+      })
+
+      var page=0;
+      $(".screen").click(function(){
+        page+=1;
+        if(page>2){
+            page=0;
+        }
+        $(".pages").css("left","-" + page*100 + "%");
+        screen_audio.play();
+      });
+
+      $(".bottom").click(function(){
+        page=0;
+        $(".pages").css("left","-" + page*100 + "%");
+        home_audio.play();
+      });
+
+      $(".turn").click(function(){
+        $(".phone").css("transform","rotate(360deg)");
+        button_audio.play();
+      });
+
+      $(".wiggle").click(function(){
+        wiggletime=0;
+        wiggle_audio.play();
+      });
+
+
+      var wiggletime=21;
+      setInterval(function(){
+        if(wiggletime<=20){
+            wiggletime+=1;
+            console.log(wiggletime);
+            if(wiggletime%2==0){
+              $(".phone").css("left","-30px");
+            }
+            else{
+              $(".phone").css("left","30px");
+            }
+        }
+        if(wiggletime==21){
+            $(".phone").css("left","");
+        }
+
+      },60);
+
+  </script>
+</body>
+</html>
